Add user tracking, NOT adding user profiling

--- a/planet/index.html
+++ b/planet/index.html
@@ -114,6 +114,32 @@
                                 <label for="publish-description" id="publish-description-label"></label>
                             </div>
                         </div>
+                        <ul class="collapsible">
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons">arrow_drop_down</i>Advanced
+                                </div>
+                                <div class="collapsible-body">
+                                    <div class="row">
+                                        <div class="input-field col no-margin-left s12">
+                                            <input id="publish-username" type="text" class="validate">
+                                            <label for="publish-username" id="publish-username-label"></label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col no-margin-left s12">
+                                            <input id="publish-group" type="text" class="autocomplete validate">
+                                            <label for="publish-group" id="publish-group-label"></label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col no-margin-left s12">
+                                            <input id="publish-secret" type="password" class="validate">
+                                            <label for="publish-secret" id="publish-secret-label"></label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </form>
                 </div>
                 <div class="modal-footer">
